@@ -1,331 +1,258 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.serialization.Dynamic;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.OptionalInt;
+import com.mojang.serialization.Codec;
+import java.util.List;
+import java.util.function.IntFunction;
 import javax.annotation.Nullable;
 
-public class cis extends cgy implements bwh<jq<chj>> {
-   protected static final ImmutableList<cfs<? extends cfr<? super cis>>> bY = ImmutableList.of(cfs.c, cfs.f, cfs.v, cfs.s, cfs.w);
-   protected static final ImmutableList<cel<?>> bZ = ImmutableList.of(
-      cel.n, cel.g, cel.h, cel.m, cel.E, cel.t, cel.r, cel.S, cel.T, cel.o, cel.O, cel.P, new cel[]{cel.R, cel.x, cel.y, cel.B, cel.X, cel.Y, cel.Z, cel.aa}
+public class cis extends chq implements bxb<cis.b> {
+   public static final String a = "BucketVariantTag";
+   private static final alc<Integer> c = alg.a(cis.class, ale.b);
+   public static final List<cis.d> b = List.of(
+      new cis.d(cis.b.h, cwh.b, cwh.h),
+      new cis.d(cis.b.g, cwh.h, cwh.h),
+      new cis.d(cis.b.g, cwh.h, cwh.l),
+      new cis.d(cis.b.l, cwh.a, cwh.h),
+      new cis.d(cis.b.b, cwh.l, cwh.h),
+      new cis.d(cis.b.a, cwh.b, cwh.a),
+      new cis.d(cis.b.f, cwh.g, cwh.d),
+      new cis.d(cis.b.j, cwh.k, cwh.e),
+      new cis.d(cis.b.l, cwh.a, cwh.o),
+      new cis.d(cis.b.f, cwh.a, cwh.e),
+      new cis.d(cis.b.i, cwh.a, cwh.h),
+      new cis.d(cis.b.l, cwh.a, cwh.b),
+      new cis.d(cis.b.d, cwh.j, cwh.g),
+      new cis.d(cis.b.e, cwh.f, cwh.d),
+      new cis.d(cis.b.k, cwh.o, cwh.a),
+      new cis.d(cis.b.c, cwh.h, cwh.o),
+      new cis.d(cis.b.j, cwh.o, cwh.a),
+      new cis.d(cis.b.g, cwh.a, cwh.e),
+      new cis.d(cis.b.a, cwh.o, cwh.a),
+      new cis.d(cis.b.b, cwh.h, cwh.a),
+      new cis.d(cis.b.d, cwh.j, cwh.e),
+      new cis.d(cis.b.g, cwh.e, cwh.e)
    );
-   private static final akm<jq<chj>> cg = akq.a(cis.class, ako.z);
-   private static final akm<OptionalInt> ch = akq.a(cis.class, ako.v);
-   private static final int ci = 5;
-   public static final String ca = "variant";
-   private static final ali<chj> cj = chj.b;
-   public final bud cc = new bud();
-   public final bud cd = new bud();
-   public final bud ce = new bud();
-   public final bud cf = new bud();
+   private boolean bZ = true;
 
-   public cis(bus<? extends cgy> $$0, dfm $$1) {
+   public cis(bvm<? extends cis> $$0, dha $$1) {
       super($$0, $$1);
-      this.bO = new cis.a(this);
-      this.a(esm.j, 4.0F);
-      this.a(esm.e, -1.0F);
-      this.bP = new cbk(this, 85, 10, 0.02F, 0.1F, true);
+   }
+
+   public static String b(int $$0) {
+      return "entity.minecraft.tropical_fish.predefined." + $$0;
+   }
+
+   static int a(cis.b $$0, cwh $$1, cwh $$2) {
+      return $$0.b() & 65535 | ($$1.a() & 0xFF) << 16 | ($$2.a() & 0xFF) << 24;
+   }
+
+   public static cwh c(int $$0) {
+      return cwh.a($$0 >> 16 & 0xFF);
+   }
+
+   public static cwh r(int $$0) {
+      return cwh.a($$0 >> 24 & 0xFF);
+   }
+
+   public static cis.b s(int $$0) {
+      return cis.b.a($$0 & 65535);
    }
 
    @Override
-   protected bwj.b<cis> ec() {
-      return bwj.a(bZ, bY);
-   }
-
-   @Override
-   protected bwj<?> a(Dynamic<?> $$0) {
-      return cit.a(this.ec().a($$0));
-   }
-
-   @Override
-   public bwj<cis> eb() {
-      return (bwj<cis>)super.eb();
-   }
-
-   @Override
-   protected void a(akq.a $$0) {
+   protected void a(alg.a $$0) {
       super.a($$0);
-      $$0.a(cg, lz.aj.b(cj));
-      $$0.a(ch, OptionalInt.empty());
+      $$0.a(c, 0);
    }
 
    @Override
-   public void n() {
-      this.al.a(ch, OptionalInt.empty());
-   }
-
-   public Optional<bul> q() {
-      return this.al.a(ch).stream().mapToObj(this.dV()::a).filter(Objects::nonNull).findFirst();
-   }
-
-   public void b(bul $$0) {
-      this.al.a(ch, OptionalInt.of($$0.ar()));
-   }
-
-   @Override
-   public int ac() {
-      return 35;
-   }
-
-   @Override
-   public int aa() {
-      return 5;
-   }
-
-   public jq<chj> v() {
-      return this.al.a(cg);
-   }
-
-   public void j(jq<chj> $$0) {
-      this.al.a(cg, $$0);
-   }
-
-   @Override
-   public void b(ul $$0) {
+   public void b(ux $$0) {
       super.b($$0);
-      $$0.a("variant", this.v().e().orElse(cj).a().toString());
+      $$0.a("Variant", this.gx());
    }
 
    @Override
-   public void a(ul $$0) {
+   public void a(ux $$0) {
       super.a($$0);
-      Optional.ofNullable(alj.c($$0.l("variant"))).map($$0x -> ali.a(ma.F, $$0x)).flatMap(lz.aj::a).ifPresent(this::j);
+      this.u($$0.h("Variant"));
+   }
+
+   private void u(int $$0) {
+      this.al.a(c, $$0);
    }
 
    @Override
-   protected void a(arp $$0) {
-      bou $$1 = bot.a();
-      $$1.a("frogBrain");
-      this.eb().a($$0, this);
-      $$1.c();
-      $$1.a("frogActivityUpdate");
-      cit.a(this);
-      $$1.c();
-      super.a($$0);
+   public boolean q(int $$0) {
+      return !this.bZ;
+   }
+
+   private int gx() {
+      return this.al.a(c);
+   }
+
+   public cwh gu() {
+      return c(this.gx());
+   }
+
+   public cwh gv() {
+      return r(this.gx());
+   }
+
+   public cis.b gw() {
+      return s(this.gx());
+   }
+
+   public void a(cis.b $$0) {
+      int $$1 = this.gx();
+      cwh $$2 = c($$1);
+      cwh $$3 = r($$1);
+      this.u(a($$0, $$2, $$3));
    }
 
    @Override
-   public void h() {
-      if (this.dV().A_()) {
-         this.cf.a(this.bm() && !this.aS.d(), this.af);
+   public void i(cxk $$0) {
+      super.i($$0);
+      czt.a(ku.X, $$0, $$0x -> $$0x.a("BucketVariantTag", this.gx()));
+   }
+
+   @Override
+   public cxk X_() {
+      return new cxk(cxo.rg);
+   }
+
+   @Override
+   protected axe u() {
+      return axf.Ak;
+   }
+
+   @Override
+   protected axe o_() {
+      return axf.Al;
+   }
+
+   @Override
+   protected axe e(btv $$0) {
+      return axf.An;
+   }
+
+   @Override
+   protected axe gm() {
+      return axf.Am;
+   }
+
+   @Override
+   public void h(ux $$0) {
+      super.h($$0);
+      if ($$0.b("BucketVariantTag", 3)) {
+         this.u($$0.h("BucketVariantTag"));
       }
-
-      super.h();
    }
 
+   @Nullable
    @Override
-   public void a(akm<?> $$0) {
-      if (aq.equals($$0)) {
-         bvt $$1 = this.aw();
-         if ($$1 == bvt.g) {
-            this.cc.a(this.af);
-         } else {
-            this.cc.a();
-         }
-
-         if ($$1 == bvt.i) {
-            this.cd.a(this.af);
-         } else {
-            this.cd.a();
-         }
-
-         if ($$1 == bvt.j) {
-            this.ce.a(this.af);
-         } else {
-            this.ce.a();
-         }
-      }
-
-      super.a($$0);
-   }
-
-   @Override
-   protected void B(float $$0) {
-      float $$1;
-      if (this.cc.b()) {
-         $$1 = 0.0F;
+   public bwu a(dhr $$0, btc $$1, bvl $$2, @Nullable bwu $$3) {
+      $$3 = super.a($$0, $$1, $$2, $$3);
+      bam $$4 = $$0.H_();
+      cis.d $$6;
+      if ($$3 instanceof cis.c $$5) {
+         $$6 = $$5.b;
+      } else if ((double)$$4.i() < 0.9) {
+         $$6 = ae.a(b, $$4);
+         $$3 = new cis.c(this, $$6);
       } else {
-         $$1 = Math.min($$0 * 25.0F, 1.0F);
+         this.bZ = false;
+         cis.b[] $$8 = cis.b.values();
+         cwh[] $$9 = cwh.values();
+         cis.b $$10 = ae.a($$8, $$4);
+         cwh $$11 = ae.a($$9, $$4);
+         cwh $$12 = ae.a($$9, $$4);
+         $$6 = new cis.d($$10, $$11, $$12);
       }
 
-      this.aS.a($$1, 0.4F, this.e_() ? 3.0F : 1.0F);
+      this.u($$6.a());
+      return $$3;
    }
 
-   @Override
-   public void gs() {
-      this.dV().a(null, this, awn.jO, awo.g, 2.0F, 1.0F);
+   public static boolean b(bvm<cis> $$0, dhb $$1, bvl $$2, jh $$3, bam $$4) {
+      return $$1.b_($$3.e()).a(aya.a) && $$1.a_($$3.d()).a(dkg.J) && ($$1.t($$3).a(axt.an) || ciu.c($$0, $$1, $$2, $$3, $$4));
    }
 
-   @Nullable
-   @Override
-   public buc a(arp $$0, buc $$1) {
-      cis $$2 = bus.aa.a($$0, bur.e);
-      if ($$2 != null) {
-         cit.a($$2, $$0.G_());
-      }
+   public static enum a {
+      a(0),
+      b(1);
 
-      return $$2;
-   }
+      final int c;
 
-   @Override
-   public boolean e_() {
-      return false;
-   }
-
-   @Override
-   public void a(boolean $$0) {
-   }
-
-   @Override
-   public void a(arp $$0, cgy $$1) {
-      this.a($$0, $$1, null);
-      this.eb().a(cel.Y, bas.a);
-   }
-
-   @Override
-   public bwa a(dgd $$0, bsi $$1, bur $$2, @Nullable bwa $$3) {
-      jq<dgo> $$4 = $$0.t(this.dv());
-      if ($$4.a(axb.ai)) {
-         this.j(lz.aj.b(chj.d));
-      } else if ($$4.a(axb.aj)) {
-         this.j(lz.aj.b(chj.c));
-      } else {
-         this.j(lz.aj.b(cj));
-      }
-
-      cit.a(this, $$0.G_());
-      return super.a($$0, $$1, $$2, $$3);
-   }
-
-   public static bwo.a gm() {
-      return cgy.gr().a(bwp.v, 1.0).a(bwp.s, 10.0).a(bwp.c, 10.0).a(bwp.B, 1.0);
-   }
-
-   @Nullable
-   @Override
-   protected awm t() {
-      return awn.jM;
-   }
-
-   @Nullable
-   @Override
-   protected awm e(btb $$0) {
-      return awn.jP;
-   }
-
-   @Nullable
-   @Override
-   protected awm n_() {
-      return awn.jN;
-   }
-
-   @Override
-   protected void b(jh $$0, dvv $$1) {
-      this.a(awn.jS, 0.15F, 1.0F);
-   }
-
-   @Override
-   public boolean cJ() {
-      return false;
-   }
-
-   @Override
-   protected void Y() {
-      super.Y();
-      agt.a(this);
-   }
-
-   @Override
-   protected int e(float $$0, float $$1) {
-      return super.e($$0, $$1) - 5;
-   }
-
-   @Override
-   public void a_(ezy $$0) {
-      if (this.di() && this.bj()) {
-         this.a(this.fn(), $$0);
-         this.a(bvl.a, this.dy());
-         this.h(this.dy().c(0.9));
-      } else {
-         super.a_($$0);
+      private a(final int $$0) {
+         this.c = $$0;
       }
    }
 
-   public static boolean j(bvh $$0) {
-      if ($$0 instanceof cmh $$1 && $$1.gn() != 1) {
-         return false;
+   public static enum b implements bba {
+      a("kob", cis.a.a, 0),
+      b("sunstreak", cis.a.a, 1),
+      c("snooper", cis.a.a, 2),
+      d("dasher", cis.a.a, 3),
+      e("brinely", cis.a.a, 4),
+      f("spotty", cis.a.a, 5),
+      g("flopper", cis.a.b, 0),
+      h("stripey", cis.a.b, 1),
+      i("glitter", cis.a.b, 2),
+      j("blockfish", cis.a.b, 3),
+      k("betty", cis.a.b, 4),
+      l("clayfish", cis.a.b, 5);
+
+      public static final Codec<cis.b> m = bba.a(cis.b::values);
+      private static final IntFunction<cis.b> n = ayv.a(cis.b::b, values(), a);
+      private final String o;
+      private final xv p;
+      private final cis.a q;
+      private final int r;
+
+      private b(final String $$0, final cis.a $$1, final int $$2) {
+         this.o = $$0;
+         this.q = $$1;
+         this.r = $$1.c | $$2 << 8;
+         this.p = xv.c("entity.minecraft.tropical_fish.type." + this.o);
       }
 
-      return $$0.aq().a(axg.n);
+      public static cis.b a(int $$0) {
+         return n.apply($$0);
+      }
+
+      public cis.a a() {
+         return this.q;
+      }
+
+      public int b() {
+         return this.r;
+      }
+
+      @Override
+      public String c() {
+         return this.o;
+      }
+
+      public xv d() {
+         return this.p;
+      }
    }
 
-   @Override
-   protected cet b(dfm $$0) {
-      return new cis.c(this, $$0);
-   }
+   static class c extends chq.a {
+      final cis.d b;
 
-   @Nullable
-   @Override
-   public bvh aa_() {
-      return this.O();
-   }
-
-   @Override
-   public boolean j(cwm $$0) {
-      return $$0.a(axl.ap);
-   }
-
-   public static boolean c(bus<? extends cgy> $$0, dfn $$1, bur $$2, jh $$3, azu $$4) {
-      return $$1.a_($$3.e()).a(axc.ch) && a($$1, $$3);
-   }
-
-   class a extends cbh {
-      a(final bvj $$0) {
+      c(cis $$0, cis.d $$1) {
          super($$0);
-      }
-
-      @Override
-      protected boolean c() {
-         return cis.this.q().isEmpty();
+         this.b = $$1;
       }
    }
 
-   static class b extends ese {
-      private final jh.a l = new jh.a();
+   public static record d(cis.b b, cwh c, cwh d) {
+      public static final Codec<cis.d> a = Codec.INT.xmap(cis.d::new, cis.d::a);
 
-      public b(boolean $$0) {
-         super($$0);
+      public d(int $$0) {
+         this(cis.s($$0), cis.c($$0), cis.r($$0));
       }
 
-      @Override
-      public esh a() {
-         return !this.b.bj() ? super.a() : this.c(new jh(azm.a(this.b.cR().a), azm.a(this.b.cR().b), azm.a(this.b.cR().c)));
-      }
-
-      @Override
-      public esm a(eso $$0, int $$1, int $$2, int $$3) {
-         this.l.d($$1, $$2 - 1, $$3);
-         dvv $$4 = $$0.a(this.l);
-         return $$4.a(axc.bS) ? esm.b : super.a($$0, $$1, $$2, $$3);
-      }
-   }
-
-   static class c extends ceq {
-      c(cis $$0, dfm $$1) {
-         super($$0, $$1);
-      }
-
-      @Override
-      public boolean b(esm $$0) {
-         return $$0 != esm.k && super.b($$0);
-      }
-
-      @Override
-      protected esl a(int $$0) {
-         this.o = new cis.b(true);
-         this.o.a(true);
-         return new esl(this.o, $$0);
+      public int a() {
+         return cis.a(this.b, this.c, this.d);
       }
    }
 }
